@@ -1,5 +1,6 @@
 next
 ----
+-replace_config_keys: if a var is found that has no value (ie. is blank), replace_config_keys will still replace the var with blank within the config.
 -SavedPipeline.pm: Now supports <INCLUDE elements for including other pipelines
 -overlap_analysis: non-iterative analysis (still contains iterator for post-processing). Made speed improvements to script.
 -tag_data: new component (designed for use in CloVR)
